--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
           </li>
           <li class="nav_item" id="nav_item_3">
             <a
-              href="https://devang-saklani.web.app/"
+              href="https://ayush-jha.me/"
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -71,12 +71,12 @@
                   fill="currentColor"
                 />
               </svg>
-              works</a
+              Portfolio</a
             >
           </li>
           <li class="nav_item" id="nav_item_4">
             <a
-              href="https://github.com/Devang47/ThreeJS-Portfolio-template"
+              href="https://github.com/a-jha383"
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -101,7 +101,7 @@
 
     <button class="github_link">
       <a
-        href="https://github.com/Devang47"
+        href="https://github.com/a-jha"
         target="_blank"
         rel="noopener noreferrer"
         >@a-jha383</a
