--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
       color="#8100ff"
     />
     <link rel="shortcut icon" href="./Favicon/favicon.ico" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <meta name="msapplication-TileColor" content="#8100ff" />
     <meta name="msapplication-config" content="./Favicon/browserconfig.xml" />
     <meta name="theme-color" content="#0d4690" />
@@ -51,7 +52,7 @@
             >
           </li>
           <li class="nav_item" id="nav_item_2">
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a href="../static/Ayush_Jha.pdf" target="_blank" rel="noopener noreferrer">
               <svg viewBox="0 0 24 24">
                 <path
                   d="M19 9h-4V3H9v6H5l7 8zM4 19h16v2H4z"
@@ -102,7 +103,7 @@
     </header>
     <div class="main center">
       <div class="box center">
-        <img src="#" alt="profile image">
+        <img src="../static/mypic.jpg" alt="profile image">
         <div class="text">
           <p class="user_name">AYUSH JHA</p>
           <br><br>
@@ -114,12 +115,22 @@
         <div class="left_container off">
           <p>Skills</p>
           <div class="skills">
-            <div>Skill 1</div>
-            <div>Skill 2</div>
-            <div>Skill 3</div>
+            <div>PROGRAMMING</div><br><br>
+              <p>
+                ● C ● Python ● C++ ● JavaScript 
+● HTML
+● Java ● CSS ● C# ● Bash
+● PowerShell <br> ● MySQL
+              </p>
+              
+            <div>Soft Skills</div><br><br>
+            <p>● Problem Solving ● Leadership 
+              ● Teamwork ● Adaptability 
+              ● Emotional Intelligence
+              ● Communication</p>
           </div>
     
-          <div class="icons">
+          <div class="icons" style="align-items: center;">
             <a href="#" target="_blank" class="fab fa-facebook"></a>
             <a href="#" target="_blank" class="fab fa-instagram"></a>
             <a href="#" target="_blank" class="fab fa-linkedin"></a>
