--- a/src/index.html
+++ b/src/index.html
@@ -131,18 +131,19 @@
           <p>Skills</p>
           <div class="skills">
             <div>PROGRAMMING</div><br><br>
-              <p>
+              <h4>
                 ● C ● Python ● C++ ● JavaScript 
 ● HTML
 ● Java ● CSS ● C# ● Bash
 ● PowerShell <br> ● MySQL
-              </p>
+<br><br>
+              </h4>
               
             <div>Soft Skills</div><br><br>
-            <p>● Problem Solving ● Leadership 
+            <h4>● Problem Solving ● Leadership 
               ● Teamwork ● Adaptability 
               ● Emotional Intelligence
-              ● Communication</p>
+              ● Communication</h4>
           </div>
     
           <div class="icons" style="align-items: center;">
@@ -150,6 +151,7 @@
             <a href="https://www.hackerrank.com/ayushj383" target="_blank" class="fab fa-hackerrank"></a>
             <a href="https://www.linkedin.com/in/00-ayush-jha" target="_blank" class="fab fa-linkedin"></a>
             <a href="https://github.com/A-jha383" target="_blank" class="fab fa-github"></a>
+            <br><br>
           </div>
           <div class="cancel center">
             <i class="fas fa-times"></i>
