--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
     </div>
     <button class="github_link">
       <a
-        href="https://github.com/a-jha"
+        href="https://github.com/a-jha383"
         target="_blank"
         rel="noopener noreferrer"
         >@a-jha383</a
