--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
         <a href="https://twitter.com/AyushJh51366862?ref_src=twsrc%5Etfw" class="fixed-twitter" target="_blank"><i class="fab fa-twitter"></i> <span>Twitter</span></a>
       </div>
       <div>
-        <a href="mailto:official.ayushjha@gmail.com" class="fixed-gplus" target="_blank"><i class="fas fa-envelope-open-text"></i> <span>Google+</span></a>
+        <a href="mailto:official.ayushjha@gmail.com" class="fixed-gplus" target="_blank"><i class="fas fa-envelope-open-text"></i> <span>Mail</span></a>
       </div>
       <div>
         <a href="https://www.linkedin.com/in/00-ayush-jha" class="fixed-linkedin" target="_blank"><i class="fab fa-linkedin"></i> <span>LinkedIn</span></a>
