--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
         <div class="text">
           <p class="user_name"><br><br><b><h1>AYUSH JHA</h1></b></p>
           <br><br>
-          <p class="skill"><b> DEVELOPER </b><br><b>Beta MLSA </b><br><b>GDSC Cybersecurity Lead </b><br><b>President Bytemonk</b></p>
+          <p class="skill"><b> DEVELOPER </b><br><b>Gold MLSA <br><b>Ex-President Bytemonk</b></p>
         </div>
         <div class="arr_container center">
           <i class="fas fa-level-up-alt fa-4px"></i>
